# pyStixel-lib

./: .gitignore  LICENSE  MANIFEST.in  draw_stixel.py  pyproject.toml  requirements.txt  setup.py  stixel_world.stx1  test.py
sample/: 10084636266401282188_1120_000_1140_000_0.csv  10084636266401282188_1120_000_1140_000_0.stx1  10084636266401282188_1120_000_1140_000_1.csv  17065833287841703_2980_000_3000_000_165_FRONT.csv  waymo_calib.yaml
samples/: 6183008573786657189_5414_000_5434_000_00004_FRONT.stx1  set_0_2011_09_29_0026_3.stx1  waymo_calib.yaml
stixel/: Stixel.py  __init__.py  definition.py  helper.py  stixel_world.proto  stixel_world_pb2.pyi
stixel/protos/: segmentation.proto  stixel_world.proto  stixel_world_pb2.py  stixel_world_pb2.pyi
stixel/utils/: __init__.py  augmentation.py  detection.py  packing.py  transformation.py  visualization.py
tests/: test.py
